--- a/index.html
+++ b/index.html
@@ -478,9 +478,8 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
         <br/>
         <div class="policy">
             <p class="policy-title">
-                <b>Favor de confirmar si desea boleta o factura,
-Aceptamos todos los medios de pago,recuerde que
-contamos con la garantía de satisfacción del 100%</b>
+                <b>Este ticket es solo un documento de control interno
+            </b>
             </p>
         
 
