--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ img#impresoraButton {
                 <b id="fecha"></b>
             </p>
             <b>CLIENTE:</b>
-            <h1> class="nombre-cliente" id="mesa"
+            <h1 class="nombre-cliente" id="mesa">
             </h1>
         </div>
 
