--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
                 </tr>
                 <tr class="table-footer">
                     <td colspan="3"><h2>Descuento:</h2></td>
-                    <td colspan="3"><h2 id="descuento"></h2></td>
+                    <td colspan="3"><h2 id="subtotal_desc"></h2></td>
                     
                 </tr>
                 
