--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ img#impresoraButton {
         var total = params.has('total') ? params.get('total') : "";
         var subtotal_desc = params.has('subtotal_desc') ? params.get('subtotal_desc') : " ";
         var total_a_pagar = params.has('total_por_pagar') ? params.get('total_por_pagar') : " ";
-        var descuento = params.has('descuento') ? params.get('descuento') : " ";
+        var descuento = params.has('descuento') ? params.get('descuento') : "0.00";
         var a_cuenta = params.has('a_cuenta') ? params.get('a_cuenta') : " ";
         var estado = params.has('estado') ? params.get('estado') : "--";
 
@@ -450,7 +450,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
                 </tr>
                 <tr class="table-footer">
                     <td colspan="3"><h2>Descuento:</h2></td>
-                    <td colspan="3"><h2 id="subtotal_desc"></h2></td>
+                    <td colspan="3"><h2 id="descuento"></h2></td>
                     
                 </tr>
                 
