--- a/index.html
+++ b/index.html
@@ -339,9 +339,8 @@ img#impresoraButton {
         
         <div class="label">
             <p class="fecha_entrega">
-                <b>
-                      <br>
-                    <span id="hora"></span>
+                <b> FECHA ENTREGA: <br>
+                    <span id="fecha_entrega"></span>
                 </b>
             </p>
         </div>
