--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
    Padding-bottom: 0; /* Elimina el margen inferior */
    Padding-right: 0;
    Padding-left: 0;
+   text-transform: uppercase;
     
 
     }
