--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@ img#impresoraButton {
           <td class="" colspan="3">Total Venta:</td>
           <td colspan="3"><h2 id="total"></h2></td>
         </tr>
+
+                      <tr class="table-footer">
+                    <td colspan="3"><h2>Por Pagar:</h2></td>
+                    <td colspan="3"><h2 id="total_por_pagar"></h2></td>
+                </tr> 
 </tbody>
     </table>
         <br/>
