--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div id="thermal-pos">
         <div class="label">
-            <img src="Evergreen.png" alt="Laquamatic.png" width="60%">
+            <img src="Evergreen.png" alt="aquamatic.png" width="60%">
             <p class="info-tienda">
                 ADMINISTRACIÓN Y RENTAS SAC<br>
                 RUC: 20482261249<br>
