--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <table class="table">
             <thead>
                 <tr class="table-header">
-                    <th><h2>Cant</h2></th>
-                    <th><h2>Descripcion</h2></th>
-                    <th><h2>Precio</h2></th>
-                    <th><h2>Subtotal</h2></th>
+                    <b><th><h2>Cant</h2></th></b>
+                    <b><th><h2>Descripcion</h2></th></b>
+                    <b><th><h2>Precio</h2></th></b>
+                    <b><th><h2>Subtotal</h2></th></b>
                 </tr>
             </thead>
             <tbody id="tablaBody"></tbody>
