--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         .table-header {
             border-top: groove;
             border-bottom: groove;
+            font-weight: bold; /* Aplica negrita al texto */
         }
         
         .table-item {
@@ -119,7 +120,7 @@
         <div class="label">
             <img src="aquamatic.png" alt="Logo" width="60%">
             <p class="info-tienda">
-                ADMINISTRACIÓN Y RENTAS SAC_<br>
+                ADMINISTRACIÓN Y RENTAS SAC<br>
                 RUC: 20482261249<br>
                 Calle Sinchi Roca N° 177 Urbanización<br>
                 Vista Alegre, Víctor Larco Herrera,<br>
@@ -145,10 +146,10 @@
         <table class="table">
             <thead>
                 <tr class="table-header">
-                    <b><th><h2>Cant</h2></th></b>
-                    <b><th><h2>Descripcion</h2></th></b>
-                    <b><th><h2>Precio</h2></th></b>
-                    <b><th><h2>Subtotal</h2></th></b>
+                   <th><h2>Cant</h2></th>
+                   <th><h2>Descripcion</h2></th>
+                   <th><h2>Precio</h2></th>
+                   <th><h2>Subtotal</h2></th>
                 </tr>
             </thead>
             <tbody id="tablaBody"></tbody>
