--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             border-top: groove;
             border-bottom: groove;
             font-weight: bold; /* Aplica negrita al texto */
+            font-size: 5mm;
         }
         
         .table-item {
@@ -120,7 +121,7 @@
         <div class="label">
             <img src="aquamatic.png" alt="Logo" width="60%">
             <p class="info-tienda">
-                ADMINISTRACIÓN Y RENTAS SAC<br>
+                ADMINISTRACIÓN Y RENTAS SAC_<br>
                 RUC: 20482261249<br>
                 Calle Sinchi Roca N° 177 Urbanización<br>
                 Vista Alegre, Víctor Larco Herrera,<br>
