--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
             return params.has(name) ? params.get(name) : defaultValue;
         }
 
+        function formatNumber(value) {
+            const number = parseFloat(value);
+            if (isNaN(number)) {
+                return '0.00';
+            }
+            return number.toFixed(2);
+        }
         const nro_boleta = getUrlParam('boleta', '---');
         const nombre_cliente = getUrlParam('cliente', '==Cliente==');
         const telefono = getUrlParam('telefono', '==Cliente==');
