--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         setElementContent("total", total);
         setElementContent("a_cuenta", a_cuenta);
         setElementContent("a_cuenta_dos", a_cuenta_dos);
-        setElementContent("pago_al_entregar", pg_al_antregar);
+        setElementContent("pago_al_entregar", pago_al_antregar);
         setElementContent("descuento", descuento);
         setElementContent("total_por_pagar", total_por_pagar);
         setElementContent("estado", estado);
