--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="label">
             <img src="aquamatic.png" alt="Logo" width="60%">
             <p class="info-tienda">
-                ADMINISTRACIÓN Y RENTAS SAC__<br>
+                ADMINISTRACIÓN Y RENTAS SAC_2_<br>
                 RUC: 20482261249<br>
                 Calle Sinchi Roca N° 177 Urbanización<br>
                 Vista Alegre, Víctor Larco Herrera,<br>
