--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
         var totalElement = document.getElementById("total");totalElement.textContent = parseFloat(total).toFixed(2);
         var a_cuentaElement = document.getElementById("a_cuenta");a_cuentaElement.textContent = parseFloat(a_cuenta).toFixed(2);
         var a_cuenta_dosElement = document.getElementById("a_cuenta_dos"); a_cuenta_dosElement.textContent = parseFloat(a_cuenta_dos).toFixed(2);
+        var descuentoElement = document.getElementById("descuento"); descuentoElement.textContent = parseFloat(descuento).toFixed(2);
         var pago_al_entregarElement = document.getElementById("pago_al_entregar"); pago_al_entregarElement.textContent = parseFloat(pago_al_entregar).toFixed(2);
 
         var total_por_pagarElement = document.getElementById("total_por_pagar");total_por_pagarElement.textContent = parseFloat(total_por_pagar).toFixed(2);
