--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       .nombre-cliente {
         margin: 0mm;
         margin-top: 0;
-        font-size: mm !important;
+        font-size: 4mm !important;
       }
 
       #thermal-pos {
@@ -362,8 +362,7 @@ img#impresoraButton {
                 <b id="fecha"></b>
             <br>
             <b>CLIENTE:<br>
-            <h1 class="nombre-cliente" id="nombre_client">
-            </h1>
+            <h1 class="nombre-cliente" id="nombre_client"></h1>
         </div>
 
         <div class="label">
