--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
       .nombre-cliente {
         margin: 0mm;
-        margin-top: 0;
-        font-size: 4mm !important;
+        font-size: 8mm !important;
       }
 
       #thermal-pos {
@@ -361,7 +360,7 @@ img#impresoraButton {
                 <b>FECHA RECEPCION:<br>
                 <b id="fecha"></b>
             <br>
-            <b>CLIENTE:<br>
+            <b>CLIENTE:
             <h1 class="nombre-cliente" id="nombre_client"></h1>
         </div>
 
