--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
                     
                 </tr>
                     <tr class="table-footer">
-                    <td colspan="3"><h2>A cuenta 2:</h2></td>
+                    <td colspan="3"><h2></h2></td>
                     <td colspan="3"><h2 id="a_cuenta_dos"></h2></td>  
              
                 </tr>
