--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
 
                 
                 <tr class="table-footer">
-                    <td colspan="3"><h2>A cuenta 1:</h2></td>
+                    <td colspan="3"><h2>A cuenta:</h2></td>
                     <td colspan="3"><h2 id="a_cuenta"></h2></td>
                     
                 </tr>
