--- a/index.html
+++ b/index.html
@@ -539,7 +539,13 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
                 <b>GRACIAS POR SU PREFERENCIA!!</b>
             </p>
     </div>
-
+        <div class="label">
+            <p class="fecha_entregado">
+                <b> FECHA ENTREGADO: <br>
+                    <span id="fecha_entregado"></span>
+                </b>
+            </p>
+        </div>
 
     <script>
         var nroBoletaElement = document.getElementById("nro_boleta_id").textContent = nro_boleta;
