--- a/index.html
+++ b/index.html
@@ -539,13 +539,26 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
                 <b>GRACIAS POR SU PREFERENCIA!!</b>
             </p>
     </div>
-        <div class="label">
-            <p class="fecha_entregado">
-                <b> FECHA ENTREGADO: <br>
-                    <span id="fecha_entregado"></span>
-                </b>
-            </p>
-        </div>
+<div class="label" id="entrega_div">
+    <p class="fecha_entregado">
+        <b> FECHA ENTREGADO: <br>
+            <span id="fecha_entregado"></span>
+        </b>
+    </p>
+</div>
+
+<script>
+// Supongamos que aquí tienes la variable que trae la fecha
+let fecha = '';  // <-- tu valor capturado
+
+// Insertar la fecha en el span
+document.getElementById('fecha_entregado').textContent = fecha;
+
+// Si está vacío, ocultamos el div
+if (!fecha) {
+    document.getElementById('entrega_div').style.display = 'none';
+}
+</script>
 
     <script>
         var nroBoletaElement = document.getElementById("nro_boleta_id").textContent = nro_boleta;
