--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                       "mediatype": "image",
                       "mimetype": "image/png",
                       "caption":captionMessage,
-                      "media": "https://iili.io/3wb7AD7.png",
+                      "media": "https://iili.io/3wDiY41.png",
                       "fileName": "Imagem.png",
                       "delay": 1200,
                       "quoted": {
