--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
   <!-- Contenedor principal del ticket -->
   <div id="thermal-pos">
     <div class="label">
-      <img class="boton" src="logolavandiawspsurco.png" width="80%">
+      <img class="boton" src="logoacuamatic.PNG" width="80%">
       <br /><br>
-      <p class="info-tienda">
-        Dirección: Av. Caminos del inca 2313 Surco<br>
-        Horario de atencion:Lunes a Sabado de 9am a 7pm<br>
-        Whatsapp: 972812538
-      </p>
+          <p class="info-tienda">
+          ADMINISTRACIÓN Y RENTAS SAC__<br>
+          RUC: 20482261249<br>
+          Calle Sinchi Roca N° 177 Urbanización<br>
+          Vista Alegre, Víctor Larco Herrera,<br>
+          Trujillo, La Libertad, Perú
+          <br>
     </div>
     <br>
       <!-- Encabezado del ticket con QR alineado a la derecha -->
@@ -138,3 +140,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
