--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Contenedor principal del ticket -->
   <div id="thermal-pos">
     <div class="label">
-      <img class="boton" src="logoacuamatic.PNG" width="80%">
+      <img class="boton" src="logoaquamatic.PNG" width="80%">
       <br /><br>
           <p class="info-tienda">
           ADMINISTRACIÓN Y RENTAS SAC__<br>
@@ -140,4 +140,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
